# Paper2Presentation.ai

./: README.md  agi.py  agiplay.py  extract.py  extract_figures_tables.py  gen_md.py  pyproject.toml  slides_normed.md  voiceover.md
attention/: 1706.03762  ms.tex
mistral/: 2310.06825  main.bbl  main.tex  neurips_2023.sty  ref.bib
output/: table_1.aux  table_1.tex  table_2.aux  table_2.tex  table_3.aux  table_3.tex  table_4.aux  table_5.aux  table_5.tex  text_page_1.txt  text_page_10.txt  text_page_11.txt  text_page_12.txt  text_page_13.txt  text_page_14.txt  text_page_15.txt  text_page_2.txt  text_page_3.txt  text_page_4.txt  text_page_5.txt  text_page_6.txt  text_page_7.txt  text_page_8.txt  text_page_9.txt
